# distributed-task-orchestration-platform

./: README.md  env.example  pyproject.toml
distributed-task-orchestration-platform/: .dockerignore  .gitignore  Makefile  README.md  requirements.txt
distributed-task-orchestration-platform/deploy/docker/: Dockerfile  docker-compose.yml
distributed-task-orchestration-platform/docs/: ARCHITECTURE.md  GETTING_STARTED.md
distributed-task-orchestration-platform/monitoring/prometheus/: prometheus.yml
distributed-task-orchestration-platform/scripts/: health_check.py  migrate.py
distributed-task-orchestration-platform/src/: main.py
distributed-task-orchestration-platform/src/api/middleware/: __init__.py  correlation_id.py  load_shedding.py  rate_limit.py  timeout.py
distributed-task-orchestration-platform/src/api/v1/endpoints/: workflows.py
distributed-task-orchestration-platform/src/application/services/: workflow_orchestrator.py
distributed-task-orchestration-platform/src/application/use_cases/: create_workflow.py  execute_workflow.py
distributed-task-orchestration-platform/src/core/: __init__.py  constants.py  events.py  graceful_shutdown.py
distributed-task-orchestration-platform/src/domain/entities/: __init__.py  base.py  workflow.py
distributed-task-orchestration-platform/src/domain/repositories/: workflow_repository.py
distributed-task-orchestration-platform/src/domain/value_objects/: __init__.py  task_status.py  workflow_status.py
distributed-task-orchestration-platform/src/infrastructure/database/: base.py
distributed-task-orchestration-platform/src/infrastructure/database/migrations/versions/: 001_initial_schema.py
distributed-task-orchestration-platform/src/infrastructure/database/models/: task.py  workflow.py
distributed-task-orchestration-platform/src/infrastructure/database/repositories/: mappers.py  task_repository_impl.py  workflow_repository_impl.py
distributed-task-orchestration-platform/src/infrastructure/messaging/celery/: app.py  tasks.py  worker.py
distributed-task-orchestration-platform/src/infrastructure/messaging/redis/: cache.py  client.py  pubsub.py
distributed-task-orchestration-platform/src/infrastructure/monitoring/: logging.py  metrics.py  tracing.py
distributed-task-orchestration-platform/src/src/: __init__.py
distributed-task-orchestration-platform/src/src/application/: __init__.py
distributed-task-orchestration-platform/src/src/application/services/: __init__.py
distributed-task-orchestration-platform/src/src/core/: config.py  exceptions.py
distributed-task-orchestration-platform/src/src/domain/repositories/: __init__.py
distributed-task-orchestration-platform/src/src/infrastructure/database/: __init__.py
distributed-task-orchestration-platform/src/src/infrastructure/database/migrations/: env.py
distributed-task-orchestration-platform/src/src/infrastructure/database/models/: __init__.py  base.py
distributed-task-orchestration-platform/src/src/infrastructure/messaging/celery/: __init__.py
distributed-task-orchestration-platform/tests/: conftest.py
src/: main.py
src/api/: __init__.py
src/api/middleware/: error_handler.py  metrics.py
src/api/v1/: __init__.py
src/api/v1/dependencies/: __init__.py
src/api/v1/endpoints/: __init__.py  health.py
src/api/v1/websockets/: __init__.py
src/application/dto/: __init__.py
src/application/use_cases/: __init__.py
src/domain/: __init__.py
src/domain/entities/: task.py
src/domain/repositories/: task_repository.py
src/domain/value_objects/: retry_policy.py  task_config.py
src/infrastructure/: __init__.py
src/infrastructure/database/repositories/: __init__.py
src/infrastructure/messaging/: __init__.py
src/infrastructure/messaging/rabbitmq/: __init__.py
src/infrastructure/messaging/redis/: __init__.py
src/infrastructure/monitoring/: __init__.py
tests/: __init__.py
